<resources>
    <string name="app_name">Wallpapers X alpha</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="list_item_img">img</string>
    <string name="details_toolbar_img">detailsImg</string>
    <string name="arc_view_image">Arc view image</string>
    <string name="navigation_drawer_icon">Navigation drawer icon</string>
    <string name="user_avatar">User avatar</string>

    <!--Status request message-->
    <string name="request_category_network">request category from network</string>
    <string name="request_wallpapers_network">request wallpapers from network</string>
    <string name="request_wallpaper_network">request wallpaper from network</string>
    <string name="load_category_network">load category from network</string>
    <string name="load_wallpapers_network">load wallpapers from network</string>
    <string name="load_wallpaper_network">load wallpaper from network</string>
    <string name="working_category_network">working category from network</string>
    <string name="working_wallpapers_network">working wallpapers from network</string>
    <string name="working_wallpaper_network">working wallpaper from network</string>
    <string name="save_category_network">save category from network</string>
    <string name="save_wallpapers_network">save wallpapers from network</string>
    <string name="save_wallpaper_network">save wallpaper from network</string>
    <string name="shot_detail_image">details wallpaper image</string>
    <string name="shot_author_image">author img</string>
    <string name="title_item_list">Items</string>
    <string name="wallpaper_details_description">wallpaper details description</string>

    <!---->
    <string name="notif_title_download_complited">Download done</string>
    <string name="notif_title_download_error">Download error</string>
    <string name="notif_tap_to_open">Tap to open</string>
    <string name="wall_image">wall_image</string>
    <string name="transition_title">transition title</string>
    <string name="submit">done</string>
    <string name="category_title">Category</string>
    <string name="detailt_swipe_down_title">swipe down</string>
    <string name="details_swipe_up_title">swipe up</string>
    <string name="progress_view_error_btn_title">retry</string>
    <string name="load_data_with_error_text">Ooppss. Load data done with error. :(</string>
    <string name="load_wallpapers_bad_request_text">Ooopss. Bad request</string>
    <string name="install_wall_btn_title">install</string>
    <string name="about_screen_title">About</string>
    <string name="load_wallpaper_error_toast_title">Ooops. Что-то пошло не так!</string>
    <string name="about_app_icon">about_app_icon</string>
    <string name="about_this_app_content">about app</string>
    <string name="email">E-mail</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="github">Source code</string>
    <string name="mail">support@averdsoft.ru</string>
    <string name="sen_us_emial">Send us email</string>
    <string name="twitter_url">https://twitter.com/averdsoft</string>
    <string name="facebook_url">https://web.facebook.com/averdsoft</string>
    <string name="site_url">http://averdsoft.ru</string>
    <string name="web_site">web</string>
    <string name="github_url"> </string>
    <string name="instagram_url">https://www.instagram.com/averdsoft</string>
    <string name="instagram_title">Instagram</string>
    <string name="vk_title">Vkontakte</string>
    <string name="vk_url">https://vk.com/averdsoft</string>
    <string name="g_plus_url">https://plus.google.com/+AVERDSOFT</string>
    <string name="g_plus_title">Google plus</string>
    <string name="youtube_title">YouTube</string>
    <string name="youtube_url">https://youtube.com/averdsoft</string>

    <string name="comment_user_image">Comment user image</string>
    <string name="drawer_open">nevigation open</string>
    <string name="drawer_close">navigation close</string>
    <string name="no_wallpaper_dialog_title">Remove wallpaper?</string>
    <string name="no_wallpaper_dialog_message">Black picture to save battery power.\nThe most effective on AMOLED display.</string>
    <string name="no_wallpaper_dialog_cancel_title">cancel</string>
    <string name="no_wallpaper_dialog_remove_title">remove</string>
    <string name="remove_wallpaper_toolbar_title">remove wallpaper</string>
    <string name="load_category_failed_msg">Load category failed! :(</string>
    <string name="error_msg_bad_request">Bad request! :(</string>
    <string name="error_msg_not_find">Not find! :(</string>
    <string name="error_msg_root_folder_empty">Root folder empty! :(</string>
    <string name="splash_screen_check_update_title">Check update...</string>
</resources>
