<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/details_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_primary_color"
    android:visibility="visible">

    <com.isanechek.wallpaper.ui.widgets.DragLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/drag_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:bototmExtraIndicatorHeight="@dimen/card_extra_height"
        app:bottomDragVisibleHeight="60dp">

        <FrameLayout
            android:id="@+id/details_control_container"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:alpha="0"
            tools:alpha="1"
            android:background="@color/my_primary_color">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/details_install_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:elevation="@dimen/dp0"
                android:text="@string/install_wall_btn_title"
                android:layout_gravity="center"
                android:textColor="@color/title_color"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:background="@color/my_primary_dark_color"
                tools:ignore="HardcodedText"
                tools:visibility="gone"/>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/details_photo_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.github.chrisbanes.photoview.PhotoView
                android:id="@+id/details_wallpaper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:transitionName="@string/wall_image"
                android:contentDescription="@string/wallpaper_details_description"
                tools:src="@tools:sample/avatars"
                tools:visibility="gone"/>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="@dimen/dp8"
                android:background="@android:color/transparent"
                android:visibility="gone">
                <com.isanechek.wallpaper.ui.widgets.AnimatedImageView
                    android:id="@+id/details_swipe_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:alpha="0"
                    tools:alpha="1"
                    tools:src="@drawable/ic_expand_more_white_24dp"
                    tools:ignore="ContentDescription" />

                <com.isanechek.wallpaper.ui.widgets.AnimatedTextView
                    android:id="@+id/details_swipe_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:alpha="0"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    tools:ignore="HardcodedText"
                    tools:alpha="1"
                    tools:text="swipe up"/>
            </FrameLayout>
        </FrameLayout>
    </com.isanechek.wallpaper.ui.widgets.DragLayout>
</FrameLayout>